--- a/sudoku.htm
+++ b/sudoku.htm
@@ -35,6 +35,6 @@
     	&nbsp;
     	&nbsp;
     	&nbsp;
-<footer><p align="center">The game is developed by Brijesh Chandra.<br>Hope you enjoy playing it!</p></footer>
+<footer><p align="center">The game is developed for fun.<br>Hope you enjoy playing it!</p></footer>
 </body>
 </html>
